# medusa

./: .gitignore  Dockerfile.python  Dockerfile.rust  LICENSE  Makefile  README.md  STATUS.md  docker-compose.yml
configs/: audit.conf  defaults.conf
configs/exchanges/: kraken.conf
configs/strategies/: example_strategy.conf
docs/: architecture.md  python-research-framework.md  testing.md
examples/: arbitrage_example.q  coordinator_example.q  simpleArb.q
scripts/: setup-kdb.sh  test_exchange_load.q  verify_config_system.sh
src/python/: pyproject.toml
src/python/medusa/: __init__.py
src/python/medusa/analytics/: __init__.py  portfolio.py  risk.py  tearsheet.py
src/python/medusa/backtest/: __init__.py  engine.py  nautilus_engine.py  strategy_adapter.py  vectorbt_engine.py
src/python/medusa/data/: __init__.py  csv_loader.py  kdb_loader.py  loader.py  parquet_loader.py  validators.py
src/python/medusa/features/: __init__.py  pipeline.py  preprocessing.py  technical.py
src/python/medusa/live/: __init__.py  order_publisher.py  signal_tester.py  tick_subscriber.py
src/python/medusa/models/: __init__.py  base.py  lstm.py  nbeats.py  tft.py  transformer.py  xgboost_model.py
src/python/medusa/notebooks/: __init__.py
src/python/medusa/strategies/: __init__.py  base.py
src/python/medusa/strategies/examples/: __init__.py  sma_crossover.py
src/python/medusa/utils/: config.py  logging.py
src/python/tests/: conftest.py  test_config.py  test_data_loaders.py  test_features.py  test_integration.py  test_models.py  test_placeholder.py  test_risk.py  test_strategies.py
src/q/: init.q
src/q/audit/: audit.q  fiat_balance.q  ledger.q  order.q  position_cache.q  runner.q  volume_balance.q
src/q/config/: QUICK_REFERENCE.md  README.md  config.q  example_usage.q  loader.q  parser.q  validator.q
src/q/engine/: actor.q  config.q  harness.q  history.q  loop.q  mode.q  orders.q  position.q  strategy.q  types.q
src/q/exchange/: QUICK_START.md  README.md  base.q  coordinator.q  registry.q  stub.q
src/q/gds/: alert_manager.q  audit_dashboard.q  gds_init.q  heartbeat_auditor.q  orderbook_auditor.q  perf_auditor.q  trade_auditor.q
src/q/lib/: README_MONEY.md  money.q
src/q/schema/: exchange.q  init.q  metadata.q  order.q  tables.q  trade.q  transaction.q  types.q
src/q/strategy/: arb.q  mm.q  simpleArb.q  simpleMM.q
src/q/test/: test_gds_heartbeat.q  test_gds_orderbook.q  test_gds_trade.q
src/q/tick/: r.q  sym.q  u.q
src/rust/: Cargo.toml
src/rust/exchange-connector/: Cargo.toml  README.md
src/rust/exchange-connector/src/: client.rs  lib.rs  rate_limiter.rs  types.rs  websocket.rs
src/rust/exchange-connector/src/exchanges/: bitstamp.rs  coinbase.rs  kraken.rs  mod.rs
src/rust/exchange-connector/src/feeds/: bitstamp.rs  coinbase.rs  kraken.rs  mod.rs
src/rust/exchange-daemon/: Cargo.toml  README.md
src/rust/exchange-daemon/src/: main.rs
src/rust/gds-common/: Cargo.toml  README.md
src/rust/gds-common/src/: backoff.rs  config.rs  health.rs  lib.rs  publisher.rs
src/rust/gds-orderbook-subscriber/: Cargo.toml  README.md
src/rust/gds-orderbook-subscriber/src/: exchange_adapter.rs  main.rs  orderbook_state.rs  subscriber.rs
src/rust/gds-trade-subscriber/: Cargo.toml  README.md
src/rust/gds-trade-subscriber/src/: deduplicator.rs  exchange_adapter.rs  main.rs  subscriber.rs  tests.rs
src/rust/kdb-ipc/: Cargo.toml  README.md
src/rust/kdb-ipc/src/: client.rs  decode.rs  encode.rs  error.rs  lib.rs  protocol.rs  types.rs
tests/q/: run_money_tests.q  test_audit.q  test_config.q  test_config_all.q  test_exchange.q  test_loader.q  test_money.q  test_money_integration.q  test_parser.q  test_schema.q  test_validator.q  verify_money.q
tests/q/engine/: test_integration.q  test_loop.q  test_strategy.q
tests/q/exchange/: test_coordinator.q
tests/q/strategy/: test_arb.q  test_mm.q  test_simpleArb.q  test_simpleMM.q
