[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medusa"
version = "0.1.0"
description = "Backtesting and research tools for the Medusa algorithmic trading system"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "medusa contributors" }]
keywords = ["trading", "backtesting", "kdb+", "algorithmic-trading"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    # Core Data
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "polars>=0.20.0",
    "scipy>=1.11.0",
    "pyarrow>=17.0.0",
    "pykx>=2.4.0",

    # Backtesting
    "vectorbt>=0.26.0",
    "nautilus_trader>=1.196.0",

    # Technical Analysis
    "pandas-ta>=0.3.14b",

    # Deep Learning
    "torch>=2.1.0",
    "lightning>=2.1.0",
    "pytorch-forecasting>=1.0.0",

    # Traditional ML
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.1.0",
    "statsmodels>=0.14.0",

    # Portfolio & Risk Analytics
    "quantstats>=0.0.62",
    "riskfolio-lib>=5.0.0",

    # Visualization
    "matplotlib>=3.10.0",
    "plotly>=5.18.0",
    "seaborn>=0.13.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "loguru>=0.7.0",
    "tqdm>=4.66.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "jupyter>=1.1.0",
    "jupyterlab>=4.3.0",
    "matplotlib>=3.10.0",
    "pandas-stubs>=2.2.0",  # Type stubs for pandas
    "ipython>=8.17.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["medusa*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--strict-config"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pykx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["vectorbt.*", "nautilus_trader.*", "quantstats.*", "riskfolio.*", "pytorch_forecasting.*", "lightgbm.*", "xgboost.*", "pandas_ta.*", "plotly.*", "seaborn.*", "loguru.*", "lightning.*", "torch.*", "joblib.*", "scipy.*", "polars.*", "statsmodels.*", "sklearn.*"]
ignore_missing_imports = true
