[workspace]
members = [
    "exchange-connector",
    "kdb-ipc",
    "exchange-daemon",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["medusa contributors"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
bytes = "1.5"
byteorder = "1.5"

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
url = "2.5"

# Cryptography for exchange authentication
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"

# Async trait
async-trait = "0.1"

# CLI parsing
clap = { version = "4.5", features = ["derive"] }
