[package]
name = "exchange-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "exchange-daemon"
path = "src/main.rs"

[dependencies]
exchange-connector = { path = "../exchange-connector" }
kdb-ipc = { path = "../kdb-ipc" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
